--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Git In Group</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>This is a Group Work in Git</h1>
+    </header>
+    <main>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam totam vel voluptatibus commodi animi vitae
+            maxime exercitationem! Placeat iure impedit, dolores aspernatur quos totam? Fuga, dignissimos! Qui odio
+            voluptatibus ea!</p>
+    </main>
+    <footer>
+        <ul>
+            <li>facebook</li>
+            <li>Linkeding</li>
+            <li>Instagram</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
