--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>This is a Group Work in Git</h1>
+        <h1 class="title">Group Work in Git</h1>
     </header>
     <main>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam totam vel voluptatibus commodi animi vitae
@@ -25,6 +25,7 @@
             <li>Instagram</li>
         </ul>
     </footer>
+    <script src="./main.js"></script>
 </body>
 
 </html>
